dataset1235/2025-2/1955397009/users/3091828991/executions/2304143742_3090212252.log
== SUBMISSION (2025-09-02 13:52:53)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input())
teste(15)
print(6)
teste(24)
print(8)
teste(16)
print(8)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    teste(15)
TypeError: 'int' object is not callable
-- TEST CASE 2:
---- input:
0
---- correct output:
x
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    teste(15)
TypeError: 'int' object is not callable
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 13:55:31)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input())
print(15)
print()
print(24)
print()
print16)
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
-- ERROR:
File "XXXX", line 7
    print16)
           ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
0
---- correct output:
x
-- ERROR:
File "XXXX", line 7
    print16)
           ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 13:47:45)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input())
print(15)
print(5)
print(24)
print(8)
print(16)
print(8)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
---- user output:
8
-- TEST CASE 2:
---- input:
0
---- correct output:
x
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 13:53:47)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input())
print(15)
print(8)
print(24)
print(6)
print16)
print(6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
-- ERROR:
File "XXXX", line 7
    print16)
           ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
0
---- correct output:
x
-- ERROR:
File "XXXX", line 7
    print16)
           ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 13:48:22)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input())
print(15)
print(6)
print(24)
print(8)
print(16)
print(8)
-- EXECUTION TIME: 
0.02
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
---- user output:
8
-- TEST CASE 2:
---- input:
0
---- correct output:
x
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
